--- a/html.html
+++ b/html.html
@@ -17,18 +17,18 @@
 
         <div id="card-groups"></div>
 
-        <div id="card-swiper-buttons">
-            <button onclick="handleLeftButton()">
-                <i class="fa-solid fa-arrow-left"></i>
+        <div id="card-swiper">
+            <button id="hate-button" onclick="handleLeftButton()">
+                <i class="fa-solid fa-xmark"></i>
             </button>
-            <button onclick="handleRightButton()">
-                <i class="fa-solid fa-arrow-right"></i>
+            <button id="heart-button" onclick="handleRightButton()">
+                <i class="fa-solid fa-heart"></i>
             </button>
         </div>
 
     </div>
 
-    <input type="file" id="excel-file" value="excel-file"/>
+    <input type="file" id="excel-file">
 
     <script>
 
